cancel outstanding tasks when a shell is deleted

--- a/fml/BUILD.gn
+++ b/fml/BUILD.gn
@@ -61,6 +61,8 @@ source_set("fml") {
     "posix_wrappers.h",
     "raster_thread_merger.cc",
     "raster_thread_merger.h",
+    "scoped_task_runner.cc",
+    "scoped_task_runner.h",
     "size.h",
     "synchronization/atomic_object.h",
     "synchronization/count_down_latch.cc",
@@ -259,6 +261,7 @@ if (enable_unittests) {
       "message_unittests.cc",
       "paths_unittests.cc",
       "raster_thread_merger_unittests.cc",
+      "scoped_task_runner_unittests.cc",
       "synchronization/count_down_latch_unittests.cc",
       "synchronization/semaphore_unittest.cc",
       "synchronization/sync_switch_unittest.cc",
